--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'Quicksand', sans-serif;
+    src: url("/fonts/Quicksand/Quicksand-VariableFont_wght.ttf");
+  }
 body{
     background-color: #242121;
 }
@@ -22,30 +26,32 @@ body{
     margin: 0px auto;
 }
 .logo img{
-    width: 270px
+    width: 270px;
 }
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     border-radius: 9px;
     align-items: center;
-    font-family: Roboto;
+    font-family: 'Quicksand', sans-serif;
     text-align: center;
     font-size: 24px;
 }
+.back{
+    max-height: 550px;
+}
 .welcome-text{
     max-width: 677px;
-    font-family: Roboto;
+    font-family: 'Quicksand', sans-serif;
     font-weight:  500px;
     font-size: 46px;
     text-align: center;
     padding: 10px;
-    position: absolute;
-    top: 265px;
-    right: 650px;
+    position: relative;
+    margin: 0px auto;
+    top: -380px;
     backdrop-filter: blur(10px);
-    min-width: 500px;
-border-radius: 50%;
+    border-radius: 50%;
 }
 
 .main-grid{
@@ -62,17 +68,28 @@ border-radius: 50%;
     text-align: center;
     position: relative;
     padding-bottom: 15px;
-    margin-bottom: 100px;
+    margin-bottom: 140px;
 }
-.card-heading{
-  font-family: Roboto;
-  font-weight: 400;
-  font-size: 20px;
+.bookCard img:hover{
+    transform: scale(1.3);
+}
+.bookCard img:hover{
+    transform: scale(1.8);
+    transition-timing-function: ease-in-out;
+    transition-duration: 0.3s;
+}
 
+.card-heading{
+    margin: 0px auto;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
+  font-size: 26px;
+  max-width: 300px;
+  text-align: center;
 }
 
 .price{
-font-family: Roboto;
+font-family: 'Quicksand', sans-serif;
 font-weight: 500;
 font-size: 32px;
 color:#faf1ce;
@@ -90,7 +107,7 @@ left: 240px
 position: absolute;
 bottom: -70px;
 left: 140px;
-font-family: Roboto;
+font-family: 'Quicksand', sans-serif;
 font-weight: 500;
 font-size: 16px;
 margin-top: 15px;
@@ -112,7 +129,7 @@ background-color:  #242121;
   position: absolute;
   bottom: -70px;
   left: 300px;
-  font-family: Roboto;
+  font-family: 'Quicksand', sans-serif;
   font-weight: 500;
   font-size: 16px;
   margin-top: 15px;
