feat: add stylings

--- a/style.css
+++ b/style.css
@@ -87,6 +87,17 @@ body{
   max-width: 300px;
   text-align: center;
 }
+.card-heading p{
+    margin: 0px auto;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  max-width: 300px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
 
 .price{
 font-family: 'Quicksand', sans-serif;
