--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ body{
   max-width: 1160px;
 }
 .cart {
-  text-align: right;
-  padding-right: 15px;
+  text-align: center;
+  margin: 0 auto;
+  max-height: 100px;
+  margin-top: 15px;;
 }
 .cart img{
   width: 80px;
@@ -79,11 +81,16 @@ body{
     padding-bottom: 15px;
     margin-bottom: 160px;
 }
+.bookCard img{
+  width: 180px;
+  margin-top: 15px;
+  margin-bottom: 25px;
+}
 .bookCard img:hover{
     transform: scale(1.3);
 }
 .bookCard img:hover{
-    transform: scale(1.6);
+    transform: scale(1.2);
     transition-timing-function: ease-in-out;
     transition-duration: 0.3s;
 }
@@ -203,7 +210,8 @@ font-weight: 500;
 font-size: 26px;
 display: flex;
 position: relative;
-left: 700px;
-top: -55px
+text-align: center;
+margin: 0px auto;
+top: -140px;
+left: 15px;
   }
-
