--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
   grid-template-columns: 1fr 1fr 1fr;
   margin: 0 auto;
   margin-top: 50px;
+  margin-bottom: 20px;
   max-width: 1160px;
 }
 .cart {
@@ -42,6 +43,7 @@ body{
 .grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    min-height: 180px;
     border-radius: 9px;
     align-items: center;
     font-family: 'Quicksand', sans-serif;
@@ -158,6 +160,24 @@ left: 240px
   .descriptionBlock-show {
     visibility: visible;
     z-index: 1;
+  }
+  .confirm-btn{
+    visibility: hidden;
+  }
+  .confirm-btn-show{
+    visibility: visible;
+    margin: 0 auto;
+margin-top: 10px;
+  height: 40px;
+  width: 130px;
+  border-radius: 7px;
+  background-color:  #242121;
+  border: 1px solid #FFE787;
+  color: #FFE787;
+font-family: 'Quicksand', sans-serif;
+font-weight: 500;
+font-size: 16px;
+
   }
 .btn-buy{
   visibility: visible;
