--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
     src: url("/fonts/Quicksand/Quicksand-VariableFont_wght.ttf");
   }
 body{
-    background-color: #242121;
+    background-color: #0a0a23;
 }
 .header{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: 0 auto;
-  margin-top: 50px;
-  margin-bottom: 20px;
+  margin-top: 20px;
   max-width: 1160px;
 }
 .cart {
@@ -26,7 +25,7 @@ body{
     margin: 0px auto;
     margin-bottom: 70px;
     max-width: 1160px;
-    background-color: #312d2d;
+    background-color: #1b1b32;
     color: white;
     border-radius: 8px;
 }
@@ -139,15 +138,15 @@ left: 240px
   position:absolute;
   }
   .description{
-    border: 1px solid #FFE787;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     border-radius: 8px;
     max-width: 220px;
     font-family: 'Quicksand', sans-serif;
   font-weight: 300;
   font-size: 16px;
   padding: 20px;
-  background-color: #ffe787d2;
-  color:#242121;
+  background-color:aliceblue;
+  color:#0a0a23;
   text-align: justify;
   z-index: 1;
   position: relative;
@@ -155,7 +154,16 @@ left: 240px
   left: 290px;
   margin-bottom: 50px;
   height: 150px;
-  overflow: auto;
+  overflow-y: scroll;
+    }
+    .description::-webkit-scrollbar {
+      width: 10px;
+    }
+    .description::-webkit-scrollbar-thumb {
+      background-color: #0a0a23;
+      border: 4px solid transparent;
+      border-radius: 8px;
+      background-clip: padding-box;
     }
   .descriptionBlock-show {
     visibility: visible;
@@ -166,12 +174,13 @@ left: 240px
   }
   .confirm-btn-show{
     visibility: visible;
+    cursor: pointer;
     margin: 0 auto;
 margin-top: 10px;
   height: 40px;
   width: 130px;
   border-radius: 7px;
-  background-color:  #242121;
+  background-color:  #0a0a23;
   border: 1px solid #FFE787;
   color: #FFE787;
 font-family: 'Quicksand', sans-serif;
@@ -184,7 +193,7 @@ font-size: 16px;
   height: 40px;
   width: 130px;
   border-radius: 7px;
-  background-color:  #242121;
+  background-color:  #0a0a23;
   border: 1px solid #FFE787;
   color: #FFE787;
 position: absolute;
@@ -199,7 +208,7 @@ font-size: 16px;
 .btn-buy:hover{
 background-color:  #FFE787;
   border: 1px solid #FFE787;
-  color:  #242121;
+  color:  #0a0a23;
   cursor: pointer
 }
 .btn-learn{
@@ -207,7 +216,7 @@ background-color:  #FFE787;
     height: 40px;
     width: 130px;
     border-radius: 7px;
-    background-color: #242121;
+    background-color: #0a0a23;
     border: 1px solid #FFE787;
     color: #FFE787;
   position: absolute;
@@ -222,7 +231,7 @@ background-color:  #FFE787;
   .btn-learn:hover{
   background-color: #FFE787;
     border: 1px solid #FFE787;
-    color: #242121;
+    color: #0a0a23;
     cursor: pointer
   }
   .cartcount{
