--- a/style.css
+++ b/style.css
@@ -174,7 +174,20 @@ margin: 0 auto;
     visibility: visible;
     z-index: 1;
   }
-
+.cross{
+  cursor: pointer;
+  display:block;
+  position: relative;
+  right: -145px;
+  top: -150px;
+  float: right;
+  border: none;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: red;
+  z-index: 2;
+}
   .cart-content{
     visibility: hidden;
   }
