--- a/delivery/style.css
+++ b/delivery/style.css
@@ -66,9 +66,12 @@ body {
     border-color: white;
     min-width: 300px;
   }
-
-  input[type="file"] {
-    padding: 1px 2px;
+  input[type="radio"]{
+    display: block;
   }
+  .error{
+    border: 1px solid red;
+  }
+  #error, #error1, #error2, #error3, #error4, #error5 { color: red };
 
 
