--- a/delivery/style.css
+++ b/delivery/style.css
@@ -1,9 +1,5 @@
 body {
-    width: 100%;
-    height: 100vh;
-    margin: 0;
     background-color: #1b1b32;
-    color: #f5f6f7;
     font-family: Tahoma;
     font-size: 16px;
   }
@@ -11,6 +7,7 @@ body {
   h1, p {
     margin: 1em auto;
     text-align: center;
+    color: #f5f6f7;
   }
 
   form {
@@ -19,22 +16,22 @@ body {
     min-width: 300px;
     margin: 0 auto;
     padding-bottom: 2em;
+    color: #f5f6f7;
   }
 
   fieldset {
     border: none;
     padding: 2rem 0;
     border-bottom: 3px solid #3b3b4f;
+    color: #f5f6f7;
   }
 
   fieldset:last-of-type {
     border-bottom: none;
+    color: #f5f6f7;
   }
 
-  label {
-    display: block;
-    margin: 0.5rem 0;
-  }
+
 
   input,
   textarea,
@@ -42,6 +39,7 @@ body {
     margin: 10px 0 0 0;
     width: 100%;
     min-height: 2em;
+
   }
 
   input, textarea {
@@ -50,11 +48,7 @@ body {
     color: #ffffff;
   }
 
-  .inline {
-    width: unset;
-    margin: 0 0.5em 0 0;
-    vertical-align: middle;
-  }
+
 
   input[type="submit"] {
     display: block;
@@ -65,18 +59,65 @@ body {
     background-color: #3b3b4f;
     border-color: white;
     min-width: 300px;
+    color: #f5f6f7;
   }
   input[type="radio"]{
-    display: block;
+    max-height: 10px;
+    width: 20px;
+    color: #f5f6f7;
   }
+.radio-right{
+  margin-left: 20px;
+}
+legend{
+  margin-bottom: 0px;
+}
   .error{
     border: 1px solid red;
   }
   #error, #error1, #error2, #error3, #error4, #error5 { color: red };
-#result{
-  visibility: hidden;
+
+.hide-result{
+  padding: 50px;
+  background-color: aliceblue;
+  margin: 0 auto;
+  margin-top: 40px;
+  max-width: 600px;
+  height: 600px;
+  border-radius: 10px;
+  border: 1px solid white;
 }
-.show-result{
+.result{
+  padding: 50px;
+  background-color: aliceblue;
+  margin: 0 auto;
+  margin-top: 40px;
+  max-width: 600px;
+  height: 600px;
+  border-radius: 10px;
+  border: 1px solid white;
+}
+.result-title{
+  color:#0a0a23;
+  margin-bottom: 30px;
+  text-align: center;
+  font-family: Tahoma;
+  font-weight: 700;
+  font-size: 46px;
+}
+.result-data{
+  color:#0a0a23;
+  margin-bottom: 30px;
+  text-align: left;
+  font-family: Tahoma;
+  font-weight: 700;
+  font-size: 36px;
+}
+.order-show{
   visibility: visible;
+
+}
+.order-hidden{
+  display:none;
 }
 
