--- a/delivery/style.css
+++ b/delivery/style.css
@@ -120,4 +120,10 @@ legend{
 .order-hidden{
   display:none;
 }
-
+.result-info{
+  margin-top: 50px;
+  font-family: Tahoma;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 60px;
+}
