--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     font-family: 'Quicksand', sans-serif;
     src: url("/fonts/Quicksand/Quicksand-VariableFont_wght.ttf");
   }
+  @font-face {
+    font-family: 'Alfa Slab One', cursive;
+    src: url("/fonts/Alfa_Slab_One/AlfaSlabOne-Regular.ttf");
+  }
 body{
     background-color: #0a0a23;
 }
@@ -92,10 +96,9 @@ position: relative;
   max-height: 230px;
   margin-top: 15px;
   margin-bottom: 25px;
+  box-shadow: rgba(225, 224, 224, 0.24) 0px 3px 8px;
 }
-.bookCard img:hover{
-    transform: scale(1.3);
-}
+
 .bookCard img:hover{
     transform: scale(1.2);
     transition-timing-function: ease-in-out;
@@ -213,9 +216,9 @@ max-height: 500px;
   height: 40px;
   width: 100px;
   border-radius: 8px;
-  background-color:  #0a0a23;
-  border: 0.1px solid #FFE787;
-  color: #FFE787;
+  background-color: #FFE787;
+    border: 1px solid #FFE787;
+    color: #0a0a23;
   margin: 0 auto;
 position: absolute;
 bottom: 0px;
@@ -227,43 +230,44 @@ font-size: 16px;
 }
 
 .btn-buy:hover{
-background-color:  #FFE787;
-  border: 1px solid #FFE787;
-  color:  #0a0a23;
+  background-color: #0a0a23;
+  border: 0.3px solid #FFE787;
+  color: #FFE787;
   cursor: pointer
 }
 .btn-learn{
   visibility: visible;
     height: 40px;
     width: 100px;
-    border-radius: 7px;
-    background-color: #0a0a23;
+    background-color: #FFE787;
     border: 1px solid #FFE787;
-    color: #FFE787;
-  position: absolute;
+    color: #0a0a23;
+    border-radius: 7px;
+     position: absolute;
   bottom: 0px;
   top: 50px;
   left: 125px;
   font-family: 'Quicksand', sans-serif;
   font-weight: 500;
   font-size: 16px;
-  }
+}
+
 
   .btn-learn:hover{
-  background-color: #FFE787;
-    border: 1px solid #FFE787;
-    color: #0a0a23;
+    background-color: #0a0a23;
+    border: 0.3px solid #FFE787;
+    color: #FFE787;
     cursor: pointer
   }
   .cartcount{
-    color: red;
-    font-family: 'Quicksand', sans-serif;
-font-weight: 500;
+    color: #ec0000;
+    font-family: 'Alfa Slab One', cursive;
+font-weight: 400;
 font-size: 26px;
 text-align: right;
   margin: 0 auto;
   max-height: 100px;
-  margin-top: -140px;
+  margin-top: -145px;
   padding-right: 40px;
   }
 .cart-price{
