--- a/style.css
+++ b/style.css
@@ -59,6 +59,12 @@ position: relative;
   margin-top: 15px;
     width: 270px;
 }
+.logo-gif{
+  margin-top: 15px;
+  width: 170px;
+  height: 170px;
+
+}
 
 .welcome-text{
     max-width: 477px;
